refactor(core): завершить подготовку перед v2
